<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MainActivity"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorHeader">
        <com.mikepenz.iconics.view.IconicsImageView
            android:layout_height="36dp"
            android:layout_width="36dp"
            android:padding="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/setting"
            app:iiv_color="@color/colorHomeCard"
            app:iiv_icon="gmi-settings"
            android:layout_gravity="right|top"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageView"
            android:layout_gravity="center" />
        <np.TextView
            style="@style/ALKATIP"
            android:textColor="@color/colorHomeCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp" />
        <TextView
            android:textColor="@color/colorHomeCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="v1.0"
            android:layout_gravity="center"
            android:layout_marginTop="112dp" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorBack"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/itemcamera"
                android:clickable="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/bg_card_item"
                android:gravity="center">
                <ImageView
                    style="@style/ItemIcon"
                    android:background="@drawable/cameraitem" />
                <np.TextView
                    style="@style/DarkText"
                    android:text="@string/item_camera"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/itemgallery"
                android:clickable="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/bg_card_item"
                android:gravity="center">
                <ImageView
                    style="@style/ItemIcon"
                    android:background="@drawable/galleryitem" />
                <np.TextView
                    style="@style/DarkText"
                    android:text="@string/item_gallery"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/itemlanguage"
                android:clickable="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/bg_card_item"
                android:gravity="center">
                <ImageView
                    style="@style/ItemIcon"
                    android:background="@drawable/languageitem" />
                <np.TextView
                    style="@style/DarkText"
                    android:text="@string/item_language"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/itemhistory"
                android:clickable="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/bg_card_item"
                android:gravity="center">
                <ImageView
                    style="@style/ItemIcon"
                    android:background="@drawable/historyitem" />
                <np.TextView
                    style="@style/DarkText"
                    android:text="@string/item_history"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
